# open-diff

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .stylelintignore  .stylelintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
docs/: Beyond Compare 5 功能与 UI 记录.md  Beyond Compare 5 当前项目实现对照审计.md  SVN外部比较工具集成.md  发布检查清单.md  可访问性检查清单.md  安全操作审计清单.md  小时级开发任务计划.md  开发手册.md  性能预算.md  需求文档.md
docs/demo/: open-diff-stitch-prototype.html
docs/readme/: README.de.md  README.es.md  README.fr.md  README.ko.md  README.zh-CN.md  README.zh-TW.md
public/: site.webmanifest
scripts/: capture-ui-screenshots.mjs
scripts/linux/: package-deb.sh  package-rpm.sh
scripts/macos/: package-macos.sh
scripts/windows/: package-portable.ps1  register-shell-extension.ps1  unregister-shell-extension.ps1
src/: env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/crates/archive-core/: Cargo.toml
src-tauri/crates/archive-core/src/: lib.rs
src-tauri/crates/cli-core/: Cargo.toml
src-tauri/crates/cli-core/src/: lib.rs
src-tauri/crates/clipboard-core/: Cargo.toml
src-tauri/crates/clipboard-core/src/: lib.rs
src-tauri/crates/diff-core/: Cargo.toml
src-tauri/crates/diff-core/src/: lib.rs
src-tauri/crates/document-core/: Cargo.toml
src-tauri/crates/document-core/src/: lib.rs
src-tauri/crates/file-core/: Cargo.toml
src-tauri/crates/file-core/src/: lib.rs
src-tauri/crates/folder-core/: Cargo.toml
src-tauri/crates/folder-core/src/: lib.rs
src-tauri/crates/folder-merge-core/: Cargo.toml
src-tauri/crates/folder-merge-core/src/: lib.rs
src-tauri/crates/format-core/: Cargo.toml
src-tauri/crates/format-core/src/: lib.rs
src-tauri/crates/hex-core/: Cargo.toml
src-tauri/crates/hex-core/src/: lib.rs
src-tauri/crates/image-core/: Cargo.toml
src-tauri/crates/image-core/src/: lib.rs
src-tauri/crates/job-core/: Cargo.toml
src-tauri/crates/job-core/src/: lib.rs
src-tauri/crates/logging-core/: Cargo.toml
src-tauri/crates/logging-core/src/: lib.rs
src-tauri/crates/media-core/: Cargo.toml
src-tauri/crates/media-core/src/: lib.rs
src-tauri/crates/merge-core/: Cargo.toml
src-tauri/crates/merge-core/src/: lib.rs
src-tauri/crates/performance-core/: Cargo.toml
src-tauri/crates/performance-core/src/: lib.rs
src-tauri/crates/policy-core/: Cargo.toml
src-tauri/crates/policy-core/src/: lib.rs
src-tauri/crates/registry-core/: Cargo.toml
src-tauri/crates/registry-core/src/: lib.rs
src-tauri/crates/remote-core/: Cargo.toml
src-tauri/crates/remote-core/src/: lib.rs
src-tauri/crates/report-core/: Cargo.toml
src-tauri/crates/report-core/src/: lib.rs
src-tauri/crates/script-core/: Cargo.toml
src-tauri/crates/script-core/src/: lib.rs
src-tauri/crates/session-core/: Cargo.toml
src-tauri/crates/session-core/src/: lib.rs
src-tauri/crates/settings-core/: Cargo.toml
src-tauri/crates/settings-core/src/: lib.rs
src-tauri/crates/shared-types/: Cargo.toml
src-tauri/crates/shared-types/src/: lib.rs
src-tauri/crates/shell-core/: Cargo.toml
src-tauri/crates/shell-core/src/: lib.rs
src-tauri/crates/snapshot-core/: Cargo.toml
src-tauri/crates/snapshot-core/src/: lib.rs
src-tauri/crates/sync-core/: Cargo.toml
src-tauri/crates/sync-core/src/: lib.rs
src-tauri/crates/table-core/: Cargo.toml
src-tauri/crates/table-core/src/: lib.rs
src-tauri/crates/update-core/: Cargo.toml
src-tauri/crates/update-core/src/: lib.rs
src-tauri/crates/version-core/: Cargo.toml
src-tauri/crates/version-core/src/: lib.rs
src-tauri/crates/vfs-core/: Cargo.toml
src-tauri/crates/vfs-core/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  lib.rs  main.rs
src/api/: diff.test.ts  diff.ts  folderMerge.test.ts  folderMerge.ts  sync.test.ts  sync.ts
src/app/: App.vue  accessibilityChecklist.test.ts  clipboardSource.test.ts  clipboardSource.ts  commandRegistry.test.ts  commandRegistry.ts  commandSystem.test.ts  commandSystem.ts  dropInput.test.ts  dropInput.ts  fileOpenActions.test.ts  fileOpenActions.ts  fileOperationConfirmation.test.ts  fileOperationConfirmation.ts  filePicker.test.ts  filePicker.ts  packagingConfig.test.ts  pathHistory.test.ts  pathHistory.ts  performanceBudget.test.ts  portablePackage.test.ts  portablePackage.ts  releaseChecklist.test.ts  router.test.ts  router.ts  savedSessions.test.ts  savedSessions.ts  securityAuditChecklist.test.ts  sessionAutoSelect.test.ts  sessionAutoSelect.ts  sessionCatalog.ts  sessionFactory.test.ts  sessionFactory.ts  sessionFile.test.ts  sessionFile.ts  sessionPersistence.test.ts  sessionPersistence.ts  stdinSource.test.ts  stdinSource.ts  structuredError.test.ts  (+3 more)
src/i18n/: core.test.ts  core.ts  englishResources.test.ts  index.ts  vue-i18n.d.ts
src/layouts/: AppLayout.test.ts  AppLayout.vue  workbench.ts
src/stores/: jobs.test.ts  jobs.ts  savedSessions.test.ts  savedSessions.ts  sessionLaunch.test.ts  sessionLaunch.ts  settings.test.ts  settings.ts  statusBar.test.ts  statusBar.ts  tabs.test.ts  tabs.ts  workspaces.test.ts  workspaces.ts
src/styles/: main.css
src/test/: setup.ts
src/types/: diff.ts  folderMerge.ts  session.test.ts  session.ts  sessionLaunch.ts  sync.ts
src/views/: ClipboardCompareView.test.ts  HomeView.vue  (+34 more)
(+66 files in other folders)
