[package]
name = "cli-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
diff-core = { path = "../diff-core" }
file-core = { path = "../file-core" }
folder-core = { path = "../folder-core" }
job-core = { path = "../job-core" }
merge-core = { path = "../merge-core" }
serde.workspace = true
session-core = { path = "../session-core" }
shared-types = { path = "../shared-types" }
